[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pddlgym/pddlgym", "pddlgym_planners/pddlgym_planners"]

[project]
name = "pddlgym-lamp"
version = "2025.04"
dependencies = [
  "numpy",
  "matplotlib",
  "pillow",
  "gym>=0.24.0",
  "imageio",
  "networkx",
  "scikit-image",
  "pydot",
  "ipdb", 
  "tqdm"
]
requires-python = ">=3.12"
authors = [
  {name = "David Chan", email = "dhchan@cs.umd.edu"},
]
description = "Landmark-Assisted Monte Carlo Planning"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]

